Fix: Invisible icon - has unpublished version

--- a/src/Umbraco.Web.UI.Client/src/less/tree.less
+++ b/src/Umbraco.Web.UI.Client/src/less/tree.less
@@ -365,7 +365,7 @@ div.has-unpublished-version:before {
     font-family: 'icomoon';
     color: @green;
     position: absolute;
-    font-size: 20px;
+    font-size: 30px;
     padding-left: 7px;
     padding-top: 7px;
     bottom: 0;
